lspclient: bypass shutdown delay if not needed and cleanup defunct code

BUG: 438790